#728: Update OSCommand to use commons-exec